--- a/zh_CN/add-ons/enhancedAria/nvda.po
+++ b/zh_CN/add-ons/enhancedAria/nvda.po
@@ -8,13 +8,14 @@ msgstr ""
 "Project-Id-Version: enhancedAria 2.2\n"
 "Report-Msgid-Bugs-To: nvda-translations@freelists.org\n"
 "POT-Creation-Date: 2018-11-30 05:15+1000\n"
-"PO-Revision-Date: 2018-12-01 20:02+0800\n"
+"PO-Revision-Date: 2019-01-09 07:49+0800\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Last-Translator: dingpengyu <dingpengyu06@gmail.com>\n"
-"Language-Team: \n"
+"Language-Team: NVDASimplified Chinese team All volunteers <Copyright (C) "
+"2010-2019>\n"
 "X-Generator: Poedit 2.2\n"
 
 #. TRANSLATORS: Settings dialog and/or panel title
