--- a/zh_CN/add-ons/reportSymbols/nvda.po
+++ b/zh_CN/add-ons/reportSymbols/nvda.po
@@ -8,14 +8,15 @@ msgstr ""
 "Project-Id-Version: reportSymbols 3.5\n"
 "Report-Msgid-Bugs-To: nvda-translations@freelists.org\n"
 "POT-Creation-Date: 2018-04-06 18:05+1000\n"
-"PO-Revision-Date: 2018-09-16 21:53+0800\n"
+"PO-Revision-Date: 2019-01-09 07:54+0800\n"
 "Last-Translator: dingpengyu <dingpengyu06@gmail.com>\n"
-"Language-Team: \n"
+"Language-Team: NVDASimplified Chinese team All volunteers <Copyright (C) "
+"2010-2019>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.1.1\n"
+"X-Generator: Poedit 2.2\n"
 
 #. Translators: the label of a message box dialog.
 msgid ""
