--- a/sk/add-ons/reportSymbols/nvda.po
+++ b/sk/add-ons/reportSymbols/nvda.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: reportSymbols 4.4\n"
 "Report-Msgid-Bugs-To: nvda-translations@freelists.org\n"
 "POT-Creation-Date: 2018-11-23 18:05+1000\n"
-"PO-Revision-Date: 2018-12-14 09:41+0100\n"
+"PO-Revision-Date: 2019-02-02 10:02+0100\n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Last-Translator: Ján Kulik <johny.kulik452@gmail.com>\n"
 "Language-Team: \n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. Translators: the label of a message box dialog.
 msgid ""
@@ -47,7 +47,7 @@ msgstr "&Oznamovať ostatné symboly"
 
 #. Translators: message presented in input mode.
 msgid "Shows the Report Symbols settings."
-msgstr "Zobraziť nastavenia ReportSymbols."
+msgstr "Zobrazí nastavenia ReportSymbols."
 
 #. Add-on summary, usually the user visible name of the addon.
 #. Translators: Summary for this add-on to be shown on installation and add-on information.
@@ -60,5 +60,5 @@ msgid ""
 "Allows to listen the typed symbols (non alphanumeric or blank characters), "
 "even when the speaking of characters is turned off."
 msgstr ""
-"Umoťňuje počúvať zadané symboly (Nealfanumerické alebo prázdne symboly), aj "
-"keď oznamovanie znakov vypnuté."
+"Umožňuje oznamovať zadané symboly (Nealfanumerické alebo prázdne symboly), "
+"aj keď je oznamovanie znakov vypnuté."
