--- a/ro/add-ons/enhancedAria/nvda.po
+++ b/ro/add-ons/enhancedAria/nvda.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: enhancedAria 2.2\n"
 "Report-Msgid-Bugs-To: nvda-translations@freelists.org\n"
 "POT-Creation-Date: 2018-11-30 05:15+1000\n"
-"PO-Revision-Date: 2018-12-01 01:23+0100\n"
+"PO-Revision-Date: 2019-03-16 09:32+0200\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Last-Translator: Adriani <adriani.botez@gmail.com>\n"
+"Last-Translator: Florian Ionașcu <florianionascu@hotmail.com>\n"
 "Language-Team: \n"
-"X-Generator: Poedit 2.2\n"
+"X-Generator: Poedit 2.2.1\n"
 
 #. TRANSLATORS: Settings dialog and/or panel title
 msgid "Enhanced Aria settings"
-msgstr "Enhanced Area Settings"
+msgstr "Setări Enhanced Aria"
 
 #. TRANSLATORS: An article element inside a document
 msgid "article"
